--- a/Economic/en.lproj/Localizable.strings
+++ b/Economic/en.lproj/Localizable.strings
@@ -11,13 +11,11 @@ IndtastRegistrering = "Enter Registration";
 PaakraevetFelt = "The field is required";
 GyldigtNavn = "Must be a valid name";
 KunNummer = "Can only be a number";
-KunGyldigtProjektnavn = "Must be valid project name";
+KunGyldigtAreanavn = "Must be valid area name";
 RegistreringOverskrift = "Open registrations";
 ForTrydKnap = "Cancel";
 Registreringer = "Registrations";
-Fakturaer = "Invoices";
-Faktura = "Invoice";
 Navn = "Name";
 TidForbrugt = "Time Expended";
-ProjektNavn = "Project Name";
+OmraadeNavn = "Area Name";
 Fakturering = "Billing";
